--- a/css/temp3-asideSection/temp3-asideSection.css
+++ b/css/temp3-asideSection/temp3-asideSection.css
@@ -190,7 +190,7 @@ aside a {
     #contactContent {
         width: 100%;
         margin: auto;
-        height: fit-content;
+        height: 65px; /* Fixed height for better control of spacing */
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -198,12 +198,13 @@ aside a {
         gap: 10px;
         position: fixed;
         bottom: 0px;
+        left: 0px;
         right: 0px;
-        z-index: 10;
-        padding: 13px 0px;
+        z-index: 1100; /* Highest z-index to stay above everything at the bottom */
+        padding: 10px 0px;
         background-color: var(--white);
-        border-bottom: 1px solid black;
-        box-shadow: 0px -10px 40px var(--shadow);
+        border-top: 1px solid rgba(0,0,0,0.1); /* Subtle top border */
+        box-shadow: 0px -5px 15px rgba(0,0,0,0.1);
     }
 
 
